infrastructure/galasa-plan-b-lon02/galasa-development/github-webhook-receiver/github-webhook-receiver-deployment.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-webhook-receiver
  namespace: galasa-development
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: github-webhook-receiver
  template:
    metadata:
      name: github-webhook-receiver
      labels:
        app: github-webhook-receiver
    spec:
      containers:
        - image: ghcr.io/galasa-dev/ghreceiver:main
          imagePullPolicy: Always
          name: github-webhook-receiver
          args: ["--port", "80"]
          ports:
            - containerPort: 80
              name: ghreceiver
