infrastructure/galasa-plan-b-lon02/galasa-development/github-webhook-receiver/github-webhook-receiver-service.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: v1
kind: Service
metadata:
  labels:
    app: github-webhook-receiver
  name: github-webhook-receiver
  namespace: galasa-development
spec:
  ports:
    - port: 80
  selector:
    app: github-webhook-receiver
